@@ -1,2 +1,16 @@
 #!/bin/sh
-export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
+
+## env variables
+# Java home
+export JAVA_HOME=/usr/lib/jvm/java-8-oracle
+# maven home
+export M2_HOME=/usr/share/maven
+# go
+export GOROOT=~/bin/go
+export GOPATH=~/bin/go-home
+# leiningen
+export LEIN_JAVA_CMD=/usr/lib/jvm/java-8-oracle/bin/java
+# maven
+export MAVEN_OPTS="-Xmx512m"
+# Hadoop
+export HADOOP_HOME=~/bin/hadoop-2.6.0
